# python-project-50

./: .coverage  .coveragerc  .gitignore  .pyproject.toml.swp  Makefile  README.md  actual_stylish.txt  check_indents.py  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
gendiff/: __init__.py  core.py  diff.py  diff_builder.py  file_parser.py  parser.py  parsers.py  tree_builder.py
gendiff/formatters/: __init__.py  flat.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_generate_diff.py  test_recursive_diff.py
tests/fixtures/: custom2.json
