[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
packages = [
    { include = "gendiff", from = "." }
]
description = ""
authors = ["Artem Bulavin <bulavin_artem@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
