[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
packages = [
    { include = "gendiff", from = "." }
]
description = ""
authors = ["Artem Bulavin <bulavin_artem@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
pytest = "<8.0"

[tool.ruff]
line-length = 80
select = ["E", "F", "I", "C90"]
preview = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
