[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
  { name = "Artem Bulavin", email = "bulavin_artem@inbox.ru" }
]

dependencies = [
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.1",
  "pytest<8.0",
  "pytest-cov>=7.0.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.ruff]
line-length = 80
preview = true
select = ["E", "F", "I", "C90"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

